# stupid-logging

./: stack.yaml  stupid-logging.cabal
src/System/: Logging.hs
src/System/Logging/: JSON.hs  Plain.hs  Types.hs  Utils.hs
