cabal-version:      3.0
name:               stupid-logging
version:            0.1
synopsis:           Do logging in a very stupid way
-- description:
license:            MIT
license-file:       LICENSE
author:             Nick
maintainer:         nick@typeable.io
copyright:          Typeable.io
category:           System
build-type:         Simple

flag json
     description: Enable JSON logging support with aeson
     default: False
     manual: True

common warnings
    ghc-options: -Wall -Wno-orphans

library
    import:           warnings
    exposed-modules:  System.Logging
    other-modules:    System.Logging.Plain
                      System.Logging.Types
    default-extensions: OverloadedRecordDot
    build-depends:    base >=4.16 && < 5.0
                 ,    text
    if flag(json)
      other-modules:  System.Logging.JSON
      build-depends:  aeson
                   ,  bytestring
      cpp-options: -DWITHJSON
    hs-source-dirs:   src
    default-language: GHC2021
